data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2177.wast
;; 7. **Test 7**: Set up a loop that uses `br_table` to branch based on an operand exceeding the label index range. Ensure the default label leads out of the loop correctly.    - **Constraint**: Checks boundary condition for operand indexing.    - **Relation to Infinite Loops**: Operand out-of-bounds handling errors can cause unintended infinite loops.

(assert_invalid
  (module
    (func
      (block
        (loop
          (br_table 0 0 1 (i32.const 2))
        )
      )
    )
  )
  "unknown label"
)